--- a/src/components/create-post-modal.css
+++ b/src/components/create-post-modal.css
@@ -250,7 +250,7 @@
 .cpm-video {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   background: #000;
 }
 .cpm-video--mirror {
